--- a/EXFINAL/index.html
+++ b/EXFINAL/index.html
@@ -57,7 +57,7 @@
     <nav class="Estadistica"><br>
         <div class="divestat">
             <div class="subdiv1">
-                <h2><a href="index.html"  >CONTACTENOS</a></h2>
+                <h2><a href="index2.html"  >CONTACTENOS</a></h2>
             </div>
             <div class="subdiv1">
                 <div class="cuadro"><h2>Estadistica</h2>
