--- a/EXFINAL/index.html
+++ b/EXFINAL/index.html
@@ -70,5 +70,8 @@
             </div>
         </div>
     </nav>
+    <footer class="footer">
+        TODOS LOS DERECHOS RESERVADOS AL AUTOR ©
+    </footer>
 </body>
 </html>
