--- a/EXFINAL/index2.html
+++ b/EXFINAL/index2.html
@@ -4,13 +4,15 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet"
 </head>
 <body>
     <header class="header">
         <nav class="container header">
             <div class="row">
-                <div class="col-2"></div>\
-                <div
+                <div class="col-2"></div>
+                <div class="col-8"><h1>CLUB GANADEROS PORVENIR</h1></div>
+                <div class="col-2"><a href="index.html"><button type="button" class="btn btn-success">VOLVER</button></a></div>
             </div>
         </nav>
     </header>
