--- a/EXFINAL/index2.html
+++ b/EXFINAL/index2.html
@@ -4,7 +4,7 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet"
+    <link rel="stylesheet" href="src/css/style2.css">
 </head>
 <body>
     <header class="header">
@@ -16,5 +16,34 @@
             </div>
         </nav>
     </header>
+    <nav>
+        <div class="container mt-4">
+            <h2>Formulario de Comentarios</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" class="form-control" id="nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo Electrónico:</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="mb-3">
+                    <label for="comentario" class="form-label">Comentario:</label>
+                    <textarea class="form-control" id="comentario" rows="4"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar Comentario</button>
+            </form>
+        </div>
+    </nav>
+    <nav><div class="container mt-4">
+        <h2>Redes Sociales</h2>
+        <a href="https://api.whatsapp.com/send/?phone=%2B59172961817&text=I%27m+interested+in+your+car+for+sale&type=phone_number&app_absent=0" class="btn btn-primary" target="_blank">Visitar WhatsApp</a>
+        <a href="https://m.facebook.com/rodrigo.porcel.54/" class="btn btn-primary" target="_blank">Visitar Facebook</a>
+    </div></nav>
+    <nav><div class="container mt-4">
+        <h2>Imagen Temporal</h2>
+        <img src="https://loremflickr.com/640/360" alt="Imagen Temporal" class="img-fluid">
+    </div></nav>
 </body>
 </html>
